fixed padding and margin challenges on the recipes and result card by wrapping them in a container with padding, and then removing left and right padding from the results and recipes components. This give the effect of the border that doesn't span the whole width.

--- a/src/App.css
+++ b/src/App.css
@@ -19,4 +19,9 @@ body{
 
 }
 
+.results-recipe-container {
+  width: auto;
+  background-color: white;
+  padding: 0 40px;
+}
 
